--- a/css/default.css
+++ b/css/default.css
@@ -1,6 +1,6 @@
-body{margin:0;padding:0;background:#ffe;font-size:12px;overflow:auto}
+body{margin:0;padding:0;background:#ffe;font-size:12px;overflow:auto,text-align:center}
 #mainDiv{width:100%;height:100%}
-#loveHeart{float:none;margin:0 auto;width:670px;height:625px}
+#loveHeart{margin:0 auto;width:670px;height:625px}
 #garden{width:100%;height:100%}
 #elapseClock{text-align:right;font-size:18px;margin-top:10px;margin-bottom:10px}
 #elapseClock .digit{font-family:"digit";font-size:36px}
@@ -9,7 +9,7 @@ body{margin:0;padding:0;background:#ffe;font-size:12px;overflow:auto}
 
 #loveu{padding:5px;font-size:22px;margin-top:80px;margin-right:120px;text-align:right;display:none}
 #loveu .signature{margin-top:10px;font-size:20px;font-style:italic}
-#code{float:none;margin:0 auto;width:440px;height:400px;color:#333;font-family:"Consolas","Monaco","Bitstream Vera Sans Mono","Courier New","sans-serif";font-size:12px}
+#code{margin:0 auto;width:440px;height:400px;color:#333;font-family:"Consolas","Monaco","Bitstream Vera Sans Mono","Courier New","sans-serif";font-size:12px}
 #code .string{color:#2a36ff}
 #code .keyword{color:#7f0055;font-weight:bold}
 #code .placeholder{margin-left:15px}
