--- a/css/default.css
+++ b/css/default.css
@@ -1,4 +1,4 @@
-body{margin:0;padding:0;background:#ffe;font-size:12px;overflow:auto,text-align:center}
+body{margin:0;padding:0;background:#ffe url(../bg/20.png);font-size:12px;overflow:auto,text-align:center}
 #mainDiv{width:100%;height:100%}
 #loveHeart{margin:0 auto;width:670px;height:625px}
 #garden{width:100%;height:100%}
